@@ -52,6 +52,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #9854: The default read() implementation in io.RawIOBase now
+  handles non-blocking readinto() returning None correctly.
+
 - Issue #1552: socket.socketpair() now returns regular socket.socket
   objects supporting the whole socket API (rather than the "raw"
   _socket.socket objects).
